src/objects/EDP_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Full_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for checking whether it is a full load or delta load</description>
        <label>Full Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EDP_Settings</label>
</CustomObject>